[gd_scene load_steps=5 format=3 uid="uid://d1b3xwvwxcn4f"]

[ext_resource type="Script" path="res://menus/oob/oob.gd" id="1_m6xij"]
[ext_resource type="StyleBox" uid="uid://s4015jqriuh3" path="res://styles/PanelStyleTransparent.tres" id="2_b0u1o"]
[ext_resource type="Script" path="res://menus/HBSimpleMenu.gd" id="3_vdqb8"]

[sub_resource type="LabelSettings" id="LabelSettings_khmsx"]
font_size = 24

[node name="Oob" type="Control"]
auto_translate_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m6xij")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Container" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Container"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="HBPanelContainerBlurEX2" type="HBPanelContainerBlurEX" parent="HBoxContainer/Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("2_b0u1o")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Container/VBoxContainer/HBPanelContainerBlurEX2"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Container/VBoxContainer/HBPanelContainerBlurEX2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 55

[node name="TitleLabel" type="Label" parent="HBoxContainer/Container/VBoxContainer/HBPanelContainerBlurEX2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="StepFooterLabel" type="Label" parent="HBoxContainer/Container/VBoxContainer/HBPanelContainerBlurEX2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
label_settings = SubResource("LabelSettings_khmsx")
horizontal_alignment = 1

[node name="HBPanelContainerBlurEX" type="HBPanelContainerBlurEX" parent="HBoxContainer/Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("2_b0u1o")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Container/VBoxContainer/HBPanelContainerBlurEX"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Container/VBoxContainer/HBPanelContainerBlurEX/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 55

[node name="ButtonDescriptionLabel" type="Label" parent="HBoxContainer/Container/VBoxContainer/HBPanelContainerBlurEX/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="HBoxContainer/Container/VBoxContainer/HBPanelContainerBlurEX/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 2
theme_override_constants/separation = 60
alignment = 1
script = ExtResource("3_vdqb8")
enable_wrap_around = true
